# shai

./: .env.example  .gitignore  LICENSE  README.md  deno.json  install.sh  main.ts  pyproject.toml  release.sh
.github/workflows/: ci.yml  release.yml
scripts/: install.sh  release.sh
shai/: agent.py  cli.py  config.py  shell.py  tools.py  types.py
shai/prompts/: cleanup_command_prompt.txt  cleanup_prompt.txt  command_prompt.txt  error_command_prompt.txt  error_prompt.txt  explain_prompt.txt  initial_prompt.txt  tool_prompt.txt
src/: env.ts  history.ts  main.ts  zsh-init.ts
