[project]
name = "shai"
version = "0.1.0"
description = "A natural language shell assistant"
authors = [
    {name = "Tim Kalan", email= "timkalan99@gmail.com"},
]
dependencies = [
    "openai",
    "pydantic",
    "pynput",
    "python-dotenv",
    "rich",
    "typer",
]

[project.scripts]
shai = "shai.cli:app"
